cambiando sección de experiencia

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -45,19 +45,21 @@
               <h2 class="titulo-principal">Experiencia</h2>
                 <div class="articulos">
                     <article class="article"><div class="card" style="width: 18rem;">
-                        <img src="imagenes/foto tarjeta.jpg" class="card-img-top" alt="...">
+                       <img src="imagenes/logodante.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Pediatria</h5>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, sint!</p>
-                          <a href="#" class="btn btn-primary">Turnos</a>
+                          <h5 class="card-title">Profesora de Historia</h5>
+                          <p class="card-text">Docente de Nivel Secundario</p>
+                          <p class="card-date">Desde 2012 hasta la actualidad</p>
+                          <a href="#" class="btn btn-primary">Editar</a>
                         </div>
                       </div></article>
                       <article class="article"><div class="card" style="width: 18rem;">
-                        <img src="imagenes/foto tarjeta.jpg" class="card-img-top" alt="...">
+                        <img src="imagenes/logodante.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Salud Mental</h5>
-                          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, tempore?</p>
-                          <a href="#" class="btn btn-primary">Turnos</a>
+                          <h5 class="card-title">Profesora de Educación Tecnológica</h5>
+                          <p class="card-text">Docente de Nivel Secundario</p>
+                          <p class="card-date">Desde 2012 hasta la actualidad</p>
+                          <a href="#" class="btn btn-primary">Editar</a>
                         </div>
                       </article>
                 </div>
