--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -47,16 +47,16 @@
                     <article class="article"><div class="card" style="width: 18rem;">
                        <img src="imagenes/logodante.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Profesora de Historia</h5>
+                          <h5 class="card-title">Profesora de Historia y Educación Tecnológica</h5>
                           <p class="card-text">Docente de Nivel Secundario</p>
                           <p class="card-date">Desde 2012 hasta la actualidad</p>
                           <a href="#" class="btn btn-primary">Editar</a>
                         </div>
                       </div></article>
                       <article class="article"><div class="card" style="width: 18rem;">
-                        <img src="imagenes/logodante.png" class="card-img-top" alt="...">
+                        <img src="imagenes/logoIPET.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Profesora de Educación Tecnológica</h5>
+                          <h5 class="card-title">Profesora de Historia</h5>
                           <p class="card-text">Docente de Nivel Secundario</p>
                           <p class="card-date">Desde 2012 hasta la actualidad</p>
                           <a href="#" class="btn btn-primary">Editar</a>
