modificando estilos de sección experiencia

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -44,7 +44,7 @@
             <section class="experiencia">
               <h2 class="titulo-principal">Experiencia</h2>
                 <div class="articulos">
-                    <article class="article"><div class="card" style="width: 18rem;">
+                    <article class="article"><div class="card">
                        <img src="imagenes/logodante.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Profesora de Historia y Educación Tecnológica</h5>
@@ -53,7 +53,7 @@
                           <a href="#" class="btn btn-primary">Editar</a>
                         </div>
                       </div></article>
-                      <article class="article"><div class="card" style="width: 18rem;">
+                      <article class="article"><div class="card">
                         <img src="imagenes/logoIPET.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Profesora de Historia</h5>
