agregando boton de login

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -25,10 +25,9 @@
                     <h1>Verónica Elena Nievas Guardia</h1>
                 </nav>
                 <div class="redsocial">
-                    <div><a href="#"><i class="fa-brands fa-square-facebook"></i></a></div>
-                    <div><a href="#"><i class="fa-brands fa-square-twitter"></i></a></div>
-                    <div><a href="#"><i class="fa-brands fa-instagram"></i></a></div>
-                    <div><a href="#"><i class="fa-brands fa-youtube"></i></a></div>
+                    <div ><a href="#" class="boton"><i class="fa-brands fa-github "></i></a></div>
+                    <div ><a href="#"class="boton"><i class="fa-brands fa-linkedin "></i></a></div>
+                    <div ><a href="#" class="botonlogin" >Login</a></div>
                 </div>
             </div>
             <div class="banner">
@@ -38,7 +37,7 @@
         <main>
             <section class="acercade">
                 <img src="imagenes/fotoperfil.jpg" alt="" class="fotoperfil">
-                <h2 class="titulo-principal">Acerca de</h2>
+                <h2 class="titulo-principal">Acerca de<div><i class="fa-solid fa-pen"></i></div></h2> 
                 <p>Soy Profesora de Historia y Especialista en la enseñanza de Ciencias Sociales, tengo 11 años de experiencia como docente del nivel secundario, he participado de Proyectos Interdisciplinarios en relación a la Educación Tecnológica. Siempre continué estudiando y tuve mi primer contacto con la programación en una capacitación docente, desde ese momento decidí estudiar una Tecnicatura Superior en Desarrollo Web y realizar formaciones en programación a partir del 2022. Me interesa demostrar y desarrollar mis habilidades en el sector IT.</p>
             </section>
             <section class="experiencia">
