--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,13 +38,15 @@
         <main>
             <section class="acercade">
                 <img src="imagenes/fotoperfil.jpg" alt="" class="fotoperfil">
+                <p>Verónica Nievas Guardia</p>
+                <p>Full Stack Developer Jr | Profesora de Historia</p> 
                 <h2 class="titulo-principal">Acerca de<div><i class="fa-solid fa-pen"></i></div></h2> 
                 <p>Soy Profesora de Historia y Especialista en la enseñanza de Ciencias Sociales, tengo 11 años de experiencia como docente del nivel secundario, he participado de Proyectos Interdisciplinarios en relación a la Educación Tecnológica. Siempre continué estudiando y tuve mi primer contacto con la programación en una capacitación docente, desde ese momento decidí estudiar una Tecnicatura Superior en Desarrollo Web y realizar formaciones en programación a partir del 2022. Me interesa demostrar y desarrollar mis habilidades en el sector IT.</p>
             </section>
             <section class="experiencia">
               <h2 class="titulo-principal">Experiencia</h2>
                 <div class="articulos">
-                    <article class="article"><div class="card">
+                    <article class="article"><div >
                        <img src="imagenes/logodante.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Profesora de Historia y Educación Tecnológica</h5>
@@ -52,7 +55,7 @@
                           <a href="#" class="btn btn-primary">Editar</a>
                         </div>
                       </div></article>
-                      <article class="article"><div class="card">
+                      <article class="article"><div >
                         <img src="imagenes/logoIPET.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Profesora de Historia</h5>
@@ -86,6 +89,25 @@
                     <p class="estudio-fecha">2022-2023</p>
                 </li>
             </ul>
+            </section>
+            <section class="skills">
+              <h2 class="titulo-principal">Hard & Soft Skills</h2>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">HTML 70%</div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">CSS 50%</div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">JS 50%</div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+
             </section>
         </main>
         
