--- a/FRONTEND/portfolioAngular/src/index.html
+++ b/FRONTEND/portfolioAngular/src/index.html
@@ -12,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200&family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body>
   <app-root></app-root>
 </body>
